--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>It's All In Your Head</title>
+    <title>Nightmares</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="utf-8" />
 
     <style>
    body{
-    background-image: url();
+    background-image: url('');
       background-size: cover;
       background-repeat: no-repeat;
       width: 100%
