--- a/pageone.html
+++ b/pageone.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>It's All In Your Head</title>
+    <title>Nightmares</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="utf-8" />
 
