--- a/pagetwo.html
+++ b/pagetwo.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Go Back To Sleep</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     <style>
     body {
@@ -30,9 +30,10 @@
                     "Butterfly" and "Halloween" by Isabella Mariana,<br>
                     "Swing" by INNORECORDS,<br>
                     "Moon" by Pixabay,<br>
-                    "Begotten" by E. Elias Merhige<br></center>
+                    "Begotten" by E. Elias Merhige<br>
+                    "Dream Catcher" by Miguel A.<br></center>
     <h3>Description:<h3>
-  <p></p>
+  <p>Not long after the 2019 Fall semester began, I started to experience horrific nightmares.</p>
   <br>
   <br>
 
