--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Nightmares</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
     <style>
    body{
-    background-image: url('');
+    background-image: url('videos/Sequence 01.gif');
       background-size: cover;
       background-repeat: no-repeat;
       width: 100%
@@ -16,6 +16,7 @@
       </style>
   </head>
   <body>
+
     <center><a href="pageone.html"><h1>Fall Asleep</h1></a></center>
 
     <div class="box">
