--- a/pageone.html
+++ b/pageone.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Nightmares</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
     <style>
    body{
-    background-image: url();
+    background-color: black;
       background-size: cover;
       background-repeat: no-repeat;
       width: 100%
@@ -17,6 +17,8 @@
   </head>
   <body>
     <center><a href="pagetwo.html"><h1>Wake Up</h1></a></center>
+
+    
 
     <div class="box">
     </div>
