--- a/pagetwo.html
+++ b/pagetwo.html
@@ -32,8 +32,19 @@
                     "Moon" by Pixabay,<br>
                     "Begotten" by E. Elias Merhige<br>
                     "Dream Catcher" by Miguel A.<br></center>
-    <h3>Description:<h3>
-  <p>Not long after the 2019 Fall semester began, I started to experience horrific nightmares.</p>
+    <center><h3>Description:<h3></center>
+  <center><p>Not long after the 2019 Fall semester began, I started to experience a series of<br>
+     horrific nightmares. These nightmares are always quite vivid and extremely disturbing<br>
+     and I often wake up wondering why I am dreaming these awful things or what might be<br>
+     triggering them. Most nights I sleep with the light on because waking up in the dark<br>
+     has been just as difficult as having the nightmares I have been having. Mainly because<br>
+     I wake up not knowing if I am awake or not knowing where I am when I abruptly wake up.<br>
+     "Nightmares" is a reflection of various types of nightmares I experience; from falling<br>
+     off of high places to being stalked or attacked by humanoid creatures. I can even feel<br>
+     these things touching me in my dream and even after I wake up. I feel as though someone<br>
+     has been grabbing my arms while I slept.All my nightmares have the a similar theme of me<br>
+     being harmed. This project is my way of expressing my plight and trying to make sense of<br> 
+     these nightly occurances. I fail to believe they are simply just stress-induced nightmares.</p></center>
   <br>
   <br>
 
