--- a/pagetwo.html
+++ b/pagetwo.html
@@ -19,9 +19,9 @@
 
     <center><a href="index.html"><h1>NIGHTMARES</h1></a></center>
     <br>
-    <center><h3>Medium: javascript, css, html</h3></center>
+    <center><h3>Medium:</h3> javascript, css, html</center>
     <br>
-    <center><h3>Attributes:<br>
+    <center><h3>Attributes:</h3><br>
       "Atmospheres: Demonic Whispers" by TheMSsiundeffects,<br>
                     "Plague Doctor" by Oyvind Svanes Lund,<br>
                     "Ominous sound" by tec_studio,<br>
@@ -43,7 +43,7 @@
      off of high places to being stalked or attacked by humanoid creatures. I can even feel<br>
      these things touching me in my dream and even after I wake up. I feel as though someone<br>
      has been grabbing my arms while I slept.All my nightmares have the a similar theme of me<br>
-     being harmed. This project is my way of expressing my plight and trying to make sense of<br> 
+     being harmed. This project is my way of expressing my plight and trying to make sense of<br>
      these nightly occurances. I fail to believe they are simply just stress-induced nightmares.</p></center>
   <br>
   <br>
