--- a/pagetwo.html
+++ b/pagetwo.html
@@ -44,7 +44,7 @@
      these things touching me in my dream and even after I wake up. I feel as though someone<br>
      has been grabbing my arms while I slept.All my nightmares have the a similar theme of me<br>
      being harmed. This project is my way of expressing my plight and trying to make sense of<br>
-     these nightly occurances. I fail to believe they are simply just stress-induced nightmares.</p></center>
+     these nightly occurrences. I fail to believe they are simply just stress-induced nightmares.</p></center>
   <br>
   <br>
 
